--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ main h2 {
 }
 
 /* Add Student Styles Below */
+.Richard-style {
+    color: rgb(94, 10, 53);
+    background-color: black;
+    padding: 3px;
+}
+
 .jane-style {
     color: hotpink;
     background-color: black;
