--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main h2 {
 
 /* Add Student Styles Below */
 .Richard-style {
-    color: rgb(94, 10, 53);
+    color: blue;
     background-color: black;
     padding: 3px;
 }
